# ore-v2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: graph.py  schemas.py  state.py
backend/app/agents/nodes/: __init__.py  common.py  investigator.py  planner.py  reasoner.py
backend/app/api/: health.py  metrics.py  models.py  questions.py  scenarios.py  schemas.py
backend/app/core/: config.py  enums.py  guardrails.py  logging.py  observability.py
backend/app/data/: qa_scenarios.json
backend/app/data/seed/: commits.json  documents.json  issues.json  slack.json
backend/app/db/: base.py  migrate.py  models.py  reset.py  seed.py  session.py
backend/app/db/alembic/: env.py  script.py.mako
backend/app/db/alembic/versions/: 0001_initial.py  0002_eval_runs.py  0003_human_answer_expected_sources.py  0004_document_ref.py
backend/app/eval/: __init__.py  judge.py  metrics.py  run_eval.py  runner.py  scenarios.py
backend/app/learning/: __init__.py  critic.py  injection.py  store.py
backend/app/llm/: __init__.py  config.py  gateway.py  metrics.py  smoke.py  structured.py  tiers.py
backend/app/rag/: embeddings.py  ingest.py
backend/app/services/: learning.py  metrics.py  questions.py  reasoning.py  scoring.py
backend/app/tools/: __init__.py  commit_search.py  doc_search.py  issue_search.py  keyword.py  schemas.py  slack_search.py
backend/tests/: conftest.py  test_embeddings.py  test_eval_judge.py  test_eval_metrics.py  test_graph_e2e.py  test_guardrails.py  test_learning.py  test_llm_gateway.py  test_nodes.py  test_routing.py  test_tools.py
config/: llm.yaml
deep_dive/: CodebaseMap.md  Components.md  Observability.md  Retrieval.md
frontend/: Dockerfile  index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  questions.ts  types.ts
frontend/src/components/: AnswerCard.tsx  AnswerColumn.tsx  Collapsible.tsx  ComparisonView.tsx  ConfidenceBar.tsx  EvidenceList.tsx  Feed.tsx  GapAnalysisCard.tsx  HumanAnswerForm.tsx  LearningEventCard.tsx  ModelsLegend.tsx  Nav.tsx  Section.tsx  Sidebar.tsx  SourceBadge.tsx  Stepper.tsx  TopNav.tsx  TrendChart.tsx
frontend/src/pages/: AskPage.tsx  DashboardPage.tsx
